<resources>
    <string name="app_name">OnlineAssistant</string>
    <string name="text_label_1">Schedule</string>
    <string name="text_label_2">Contacts</string>
    <string name="text_label_3">Settings</string>
    <string name="text_label_4">Profile</string>
    <string name="bt_login">LOG IN</string>
    <string name="label_name">Your login</string>
    <string name="label_password">Password</string>
    <string name="helper_text">Minimum of 9 characters</string>
    <string name="resetPassword_link">Forgot password?</string>
    <string name="log_in">Log In</string>
    <string name="login_info">You can get the password in the Information Centre</string>
    <string name="profile_headline">User Profile</string>
    <string name="schedule_headline">Your Schedule</string>
    <string name="settings_headline">Settings</string>
    <string name="contacts_headline">Contacts</string>
    <string name="your_name">Your name</string>
    <string name="position">Position</string>
    <string name="division">Division</string>
    <string name="log_out">Log Out</string>
    <string name="your_phone">Your phone</string>
    <string name="notifications">Notifications</string>
    <string name="push_notifications">Push-notifications</string>
    <string name="appearance">Appearance</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="automatic_dark_mode">Automatic dark mode</string>
    <string name="share_app">Share App</string>
    <string name="events">Events</string>
    <string name="banner">Banner</string>
    <string name="description_conference">А regional conference will shortly be convened</string>
    <string name="remind_me">REMIND ME</string>
    <string name="browse">BROWSE</string>
    <string name="menu">Menu</string>
</resources>