<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">


    <TextView
        style="@style/Theme.OnlineAssistantApp.SecondaryText"
        android:id="@+id/notifications_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notifications"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="70dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp" />
    <TextView
        style="@style/Theme.OnlineAssistantApp.SecondaryText"
        android:id="@+id/push_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/push_notifications"
        app:layout_constraintTop_toBottomOf="@+id/notifications_text_view"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/push_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:checked="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notifications_text_view"/>

    <TextView
        style="@style/Theme.OnlineAssistantApp.SecondaryText"
        android:id="@+id/appearance_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/appearance"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/push_text_view"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp" />
    <TextView
        style="@style/Theme.OnlineAssistantApp.SecondaryText"
        android:id="@+id/dark_mode_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dark_mode"
        app:layout_constraintTop_toBottomOf="@+id/appearance_text_view"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/dark_mode_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:checked="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appearance_text_view" />

    <TextView
        style="@style/Theme.OnlineAssistantApp.SecondaryText"
        android:id="@+id/automatic_dark_mode_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/automatic_dark_mode"
        app:layout_constraintTop_toBottomOf="@+id/dark_mode_text_view"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/automatic_dark_mode_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:checked="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dark_mode_text_view" />

    <TextView
        style="@style/Theme.OnlineAssistantApp.SecondaryText"
        android:id="@+id/share_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_app"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/automatic_dark_mode_text_view"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp" />

    <ImageButton
        android:id="@+id/share_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="share app with your friends"
        android:src="@drawable/icon_share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/automatic_dark_mode_text_view" />

</androidx.constraintlayout.widget.ConstraintLayout>