<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="350dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp"
    android:layout_margin="16dp"
    android:backgroundTint="@color/md_theme_light_primaryContainer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/banner_image_view"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:contentDescription="@string/banner"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/description_text_view"
            style="@style/Theme.OnlineAssistantApp.SecondaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/remind_button"
            style="@style/Theme.OnlineAssistantApp.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="10dp"
            android:text="@string/remind_me"
            android:textSize="18sp"
            android:textColor="@color/md_theme_light_onPrimaryContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_text_view"
            android:backgroundTint="@color/md_theme_light_primaryContainer"/>
        <Button
            android:id="@+id/browse_button"
            style="@style/Theme.OnlineAssistantApp.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/browse"
            android:textSize="18sp"
            android:textColor="@color/md_theme_light_onPrimaryContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_text_view"
            android:backgroundTint="@color/md_theme_light_primaryContainer"/>/>
    </LinearLayout>
    </LinearLayout>


</com.google.android.material.card.MaterialCardView>