<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/user_profile_card"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:backgroundTint="@color/md_theme_light_primaryContainer"
        app:cardCornerRadius="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="70dp"
        app:strokeWidth="0dp">

        <ImageView
            android:id="@+id/banner_image_view"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:background="@drawable/icon_4"
            android:contentDescription="UserPhoto"
            android:scaleType="centerCrop" />

    </com.google.android.material.card.MaterialCardView>


    <TextView
        android:id="@+id/user_name_text_view"
        style="@style/Theme.OnlineAssistantApp.LabelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_profile_card"
        android:layout_marginTop="30dp"
        android:layout_marginStart="16dp"/>

    <TextView
        style="@style/Theme.OnlineAssistantApp.SecondaryText"
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="John Keating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name_text_view" />

    <TextView
        style="@style/Theme.OnlineAssistantApp.LabelText"
        android:id="@+id/position_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/position"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name" />

    <TextView
        style="@style/Theme.OnlineAssistantApp.SecondaryText"
        android:id="@+id/position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="Associate Professor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/position_text_view" />

    <TextView
        style="@style/Theme.OnlineAssistantApp.LabelText"
        android:id="@+id/division_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/division"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/position" />

    <TextView
        android:id="@+id/division"
        style="@style/Theme.OnlineAssistantApp.SecondaryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="Faculty of English Language and Literature"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/division_text_view" />

        <TextView
        android:id="@+id/phone_label"
        style="@style/Theme.OnlineAssistantApp.LabelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/your_phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/division"
        app:layout_constraintVertical_bias="0.017" />

    <TextView
        android:id="@+id/user_phone_text_view"
        style="@style/Theme.OnlineAssistantApp.SecondaryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="+7 919 888 77 66"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_label" />

    <ImageButton
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:src="@drawable/icon_edit"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_label"
        tools:layout_editor_absoluteY="505dp" />

    <Button
        android:id="@+id/logoutButton"
        style="@style/Theme.OnlineAssistantApp.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="30dp"
        android:text="@string/log_out"
        android:textColor="@color/md_theme_light_error"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_phone_text_view" />

</androidx.constraintlayout.widget.ConstraintLayout>